[metadata]
name = arckit
version = 0.1.0
author = Mikel Bober-Irizar
author_email = mikel@mxbi.net
description = Tools for working with the Abstraction & Reasoning Corpus (ARC-AGI)
keywords = setuptools
license = Apache License 2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
packages = arckit
zip_safe = True
include_package_data = True
python_requires = >=3.7
install_requires =
    numpy
    rich
    drawsvg
    # flask~=2.2.2

[options.package_data]
arctools = data/*

[options.entry_points]
console_scripts = 
    arctask = arckit.cli:taskprint
    arcsave = arckit.cli:tasksave